tests/Errors/ErrorHandleStrategy/ErrorHandleConnectionStrategy.js
export class ErrorHandleConnectionStrategy
{
    handle(error, notification) {
        console.log(error);
    }
}